feat(vlog): value block && value table

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,14 @@ target_sources(leveldb
     "db/version_set.h"
     "db/write_batch_internal.h"
     "db/write_batch.cc"
+    "db/value_log.cc"
+    "db/value_log.h"
+    "table/value_table.cc"
+    "table/value_table.h"
+    "table/value_block.cc"
+    "table/value_block.h"
+    "db/value_table_cache.cc"
+    "db/value_table_cache.h"
     "port/port_stdcxx.h"
     "port/port.h"
     "port/thread_annotations.h"
@@ -339,6 +347,7 @@ if(LEVELDB_BUILD_TESTS)
         "helpers/memenv/memenv_test.cc"
         "table/filter_block_test.cc"
         "table/table_test.cc"
+        "table/value_table_test.cc"
         "util/arena_test.cc"
         "util/bloom_test.cc"
         "util/cache_test.cc"
