opt(vlog): export ValueLog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,28 +142,28 @@ target_sources(leveldb
     "db/memtable.cc"
     "db/memtable.h"
     "db/repair.cc"
-    "db/skiplist.h"
-    "db/snapshot.h"
-    "db/table_cache.cc"
-    "db/table_cache.h"
-    "db/version_edit.cc"
-    "db/version_edit.h"
-    "db/version_set.cc"
-    "db/version_set.h"
-    "db/write_batch_internal.h"
-    "db/write_batch.cc"
-    "db/value_log.cc"
-    "db/value_log.h"
-    "table/value_table.cc"
-    "table/value_table.h"
-    "table/value_block.cc"
-    "table/value_block.h"
-    "db/value_table_cache.cc"
-    "db/value_table_cache.h"
-    "port/port_stdcxx.h"
-    "port/port.h"
-    "port/thread_annotations.h"
-    "table/block_builder.cc"
+        "db/skiplist.h"
+        "db/snapshot.h"
+        "db/table_cache.cc"
+        "db/table_cache.h"
+        "db/version_edit.cc"
+        "db/version_edit.h"
+        "db/version_set.cc"
+        "db/version_set.h"
+        "db/write_batch_internal.h"
+        "db/write_batch.cc"
+        "db/value_log_impl.cc"
+        "db/value_log_impl.h"
+        "table/value_table.cc"
+        "table/value_table.h"
+        "table/value_block.cc"
+        "table/value_block.h"
+        "db/value_table_cache.cc"
+        "db/value_table_cache.h"
+        "port/port_stdcxx.h"
+        "port/port.h"
+        "port/thread_annotations.h"
+        "table/block_builder.cc"
     "table/block_builder.h"
     "table/block.cc"
     "table/block.h"
