--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,30 +118,34 @@ endif(BUILD_SHARED_LIBS)
 # Must be included before CMAKE_INSTALL_INCLUDEDIR is used.
 include(GNUInstallDirs)
 
-add_library(leveldb "" table/vlog.cc table/vlog.h)
+add_library(leveldb "")
 target_sources(leveldb
-  PRIVATE
-    "${PROJECT_BINARY_DIR}/${LEVELDB_PORT_CONFIG_DIR}/port_config.h"
-    "db/builder.cc"
-    "db/builder.h"
-    "db/c.cc"
-    "db/db_impl.cc"
-    "db/db_impl.h"
-    "db/db_iter.cc"
-    "db/db_iter.h"
+        PRIVATE
+        "${PROJECT_BINARY_DIR}/${LEVELDB_PORT_CONFIG_DIR}/port_config.h"
+        "db/builder.cc"
+        "db/builder.h"
+        "db/c.cc"
+        "db/db_impl.cc"
+        "db/db_impl.h"
+        "db/db_iter.cc"
+        "db/db_iter.h"
     "db/dbformat.cc"
     "db/dbformat.h"
     "db/dumpfile.cc"
-    "db/filename.cc"
-    "db/filename.h"
-    "db/log_format.h"
-    "db/log_reader.cc"
-    "db/log_reader.h"
-    "db/log_writer.cc"
-    "db/log_writer.h"
-    "db/memtable.cc"
-    "db/memtable.h"
-    "db/repair.cc"
+        "db/filename.cc"
+        "db/filename.h"
+        "db/log_format.h"
+        "db/log_reader.cc"
+        "db/log_reader.h"
+        "db/log_writer.cc"
+        "db/log_writer.h"
+        "db/memtable.cc"
+        "db/memtable.h"
+        "db/repair.cc"
+        "db/value_batch.cc"
+        "db/value_batch.h"
+        "db/db_wrapper.h"
+        "db/db_wrapper.cc"
         "db/skiplist.h"
         "db/snapshot.h"
         "db/table_cache.cc"
@@ -164,31 +168,33 @@ target_sources(leveldb
         "port/port.h"
         "port/thread_annotations.h"
         "table/block_builder.cc"
-    "table/block_builder.h"
-    "table/block.cc"
-    "table/block.h"
-    "table/filter_block.cc"
-    "table/filter_block.h"
-    "table/format.cc"
-    "table/format.h"
-    "table/iterator_wrapper.h"
-    "table/iterator.cc"
-    "table/merger.cc"
-    "table/merger.h"
-    "table/table_builder.cc"
-    "table/table.cc"
-    "table/two_level_iterator.cc"
-    "table/two_level_iterator.h"
-    "util/arena.cc"
-    "util/arena.h"
-    "util/bloom.cc"
-    "util/cache.cc"
-    "util/coding.cc"
-    "util/coding.h"
-    "util/comparator.cc"
-    "util/crc32c.cc"
-    "util/crc32c.h"
-    "util/env.cc"
+        "table/block_builder.h"
+        "table/block.cc"
+        "table/block.h"
+        "table/filter_block.cc"
+        "table/filter_block.h"
+        "table/format.cc"
+        "table/format.h"
+        "table/iterator_wrapper.h"
+        "table/iterator.cc"
+        "table/merger.cc"
+        "table/merger.h"
+        "table/table_builder.cc"
+        "table/table.cc"
+        "table/two_level_iterator.cc"
+        "table/two_level_iterator.h"
+        "table/vlog.cc"
+        "table/vlog.h"
+        "util/arena.cc"
+        "util/arena.h"
+        "util/bloom.cc"
+        "util/cache.cc"
+        "util/coding.cc"
+        "util/coding.h"
+        "util/comparator.cc"
+        "util/crc32c.cc"
+        "util/crc32c.h"
+        "util/env.cc"
     "util/filter_policy.cc"
     "util/hash.cc"
     "util/hash.h"
