feat(DBImpl): add WriteCallback and WriterGroup
use WriterGroup instead of BatchGroup to utilize WriteCallback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,9 +129,9 @@ target_sources(leveldb
         "db/db_impl.h"
         "db/db_iter.cc"
         "db/db_iter.h"
-    "db/dbformat.cc"
-    "db/dbformat.h"
-    "db/dumpfile.cc"
+        "db/dbformat.cc"
+        "db/dbformat.h"
+        "db/dumpfile.cc"
         "db/filename.cc"
         "db/filename.h"
         "db/log_format.h"
@@ -142,8 +142,6 @@ target_sources(leveldb
         "db/memtable.cc"
         "db/memtable.h"
         "db/repair.cc"
-        "db/value_batch.cc"
-        "db/value_batch.h"
         "db/db_wrapper.h"
         "db/db_wrapper.cc"
         "db/skiplist.h"
@@ -185,6 +183,9 @@ target_sources(leveldb
         "table/two_level_iterator.h"
         "table/vlog.cc"
         "table/vlog.h"
+        "table/value_batch.cc"
+        "table/value_batch.h"
+        "table/vlog_iter.h"
         "util/arena.cc"
         "util/arena.h"
         "util/bloom.cc"
@@ -195,16 +196,16 @@ target_sources(leveldb
         "util/crc32c.cc"
         "util/crc32c.h"
         "util/env.cc"
-    "util/filter_policy.cc"
-    "util/hash.cc"
-    "util/hash.h"
-    "util/logging.cc"
-    "util/logging.h"
-    "util/mutexlock.h"
-    "util/no_destructor.h"
-    "util/options.cc"
-    "util/random.h"
-    "util/status.cc"
+        "util/filter_policy.cc"
+        "util/hash.cc"
+        "util/hash.h"
+        "util/logging.cc"
+        "util/logging.h"
+        "util/mutexlock.h"
+        "util/no_destructor.h"
+        "util/options.cc"
+        "util/random.h"
+        "util/status.cc"
 
   # Only CMake 3.3+ supports PUBLIC sources in targets exported by "install".
   $<$<VERSION_GREATER:CMAKE_VERSION,3.2>:PUBLIC>
